--- a/pages/userAuth/signIn.html
+++ b/pages/userAuth/signIn.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,6 +13,7 @@
     <link href="../../style/style.css" rel="stylesheet">
     <link rel="stylesheet" href="../../style/signUp.css">
 </head>
+
 <body>
     <div class="container col-xl-10 col-xxl-8 pt-5">
         <div class="d-flex flex-lg-row row align-items-center bg-feint">
@@ -43,7 +45,7 @@
                         <a href="" class="float-end text-green text-decoration-none">Forgot Password?</a>
                     </div>
                     <div class="d-flex justify-content-center">
-                        <button type="submit" class="btn btn-green fw-bold  w-50">Submit</button>
+                        <button type="submit" class="btn btn-green fw-bold  w-50">Log In</button>
                     </div>
                 </form>
             </div>
@@ -54,4 +56,5 @@
     <script src="../../script/api.json"></script>
     <script src="../../script/main.js"></script>
 </body>
+
 </html>
